--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
         <link rel="stylesheet" href="./style.css">
     </head>
     <body>
+        <h1 id="header">Etch-a-Sketch</h1>
+        <div>
+            <button id="size">Set number of squares</button>
+        </div>
         <div class="grid">
         </div>
           
